--- a/index.html
+++ b/index.html
@@ -34,9 +34,20 @@
           </div>
         </div>
       </div>
+      <div id="mobile-menu" class="mobile-menu">
+        <img src="./Images/icon-menu-close.svg" alt="close-menu-icon" onclick="hideMobileMenu()"/>
+        <ul>
+            <li>Collections</li>
+            <li>Men</li>
+            <li>Women</li>
+            <li>About</li>
+            <li>Contact</li>
+          </ul>
+      </div>
       <div class="container">
         <nav>
-          <img src="./Images/logo.svg" alt="logo" />
+          <img class="menu-icon" src="./Images/icon-menu.svg" alt="menu-icon" onclick="showMobileMenu()"/>
+          <img class="brand-logo" src="./Images/logo.svg" alt="logo" />
           <ul>
             <li>Collections</li>
             <li>Men</li>
@@ -65,7 +76,13 @@
             <div class="product-images">
               <div class="image-container">
                 <div class="image-focused">
+                  <div class="previous-icon" onclick="imagePrevious()"> 
+                    <img src="./Images/icon-previous.svg" alt="previous-icon">
+                  </div>
                   <img id="image-focused" onclick="enableModalView(this)" src="" alt="product-image" />
+                  <div class="next-icon" onclick="imageNext()"> 
+                    <img src="./Images/icon-next.svg" alt="next-icon">
+                  </div>
                 </div>
                 <div id="image-array" class="image-array">
                 </div>
@@ -105,6 +122,7 @@
         </div>
       </div>
     </div>
+    <script src="./JS/toggleMobileMenu.js"></script>
     <script type="module" src="./JS/loadImages.js"></script>
     <script src="./JS/imageToggle.js"></script>
     <script src="./JS/quantityChange.js"></script>
